styles.css
/*Body*/
body {
  font-family: 'Open Sans', sans-serif;
  font-size: 12px;
  line-height: 1.3;
}

.intextlink a{
  text-decoration: none;
  color: #708090;
}

.intextlink a.current
 {color:#6E0E00;
  }

.intextlink a:focus,
.intextlink a:hover {
  color:#6E0E00;
}

/*End of body*/

/*Header*/
header {
background-color: #FFD166;
color: #FFFCF9;
margin-bottom: 0;
padding: 1%;
display: flex;
flex-wrap: wrap;
justify-content: space-between;
}

.logo {
width: 300px;
height: auto;
}
/*ATTEMPT 1 NAV*/
.menu ul {
display: flex;
justify-content: space-between;
flex-wrap: wrap;
  list-style-type: none;
  margin-right: 3px;
  padding: 3px 3px;
}

nav ul li {
    margin: 0 7px;
}

nav a {
  color: #FFFCF9;
  text-decoration: none;
  font-weight: 500;
  font-size: 1.2em;
  text-align: center;
  }

  nav a:hover,
  nav a:focus {
    color: #04b531;
  }

  nav a.current {
      text-decoration: none;
      border: 1px solid;
      border-color: white;
      border-radius: 1px;
      padding-right: 3px;
      padding-left: 3px;
  }

  .faireundon {
    color: white;
      background-color: #ffc02e;
      text-decoration: none;
      border: 2px solid;
      border-color: #ffc02e;
      border-radius: 1px;
  }
/*END ATTEMPT 1 NAV*/
/*ATTEMPT 2 NAV*/
  .menu1 a {
    color: #FFFCF9;
    text-decoration: none;
    font-weight: 500;
    font-size: 1.2em;
    display: inline-block;
    text-align: center;
    }

    .menu1 a:hover,
    .menu1 a:focus {
      color: #04b531;
    }

    .menu1 a.current {
      color: #038c26;
    }

.menu2
  {color: white;
    background-color: #6E0E00;
    text-decoration: none;
    border: 2px solid;
    border-color: #6E0E00;
    border-radius: 1px;
}
/*END ATTEMPT 2 NAV*/
.chooselang {
  display: flex;
  font-size: 1.2em;
  color: #6E0E00;
}
.chooselang ul {
display: flex;
flex-wrap: nowrap;
  list-style-type: none;
  margin-right: 3px;
  padding: 3px 3px;
}
.chooselang ul li {
    display: inline-block;
    margin: 0 4px;
}

.chooselang a {
   color: #6E0E00;
   text-decoration: none;
   display: inline-block;
   text-align: center;
 }

 .chooselang a:hover,
 .chooselang a:focus {
   color: #6E0E00;
   font-weight: bold;
 }

.currentlanguage {
    color: #6E0E00;
    font-weight: bold;
  }
/*end of header*/

/*footer*/
footer {
background-color: #FFD166;
color: #FFFCF9;
margin-bottom: 1%;
padding: 1%;
text-align: center;
margin-top: 20px;
}
/*end of footer*/

/*HOMEPAGE*/
/*banner homepage*/
.banner {
  margin-top: 0;
  padding-bottom: 0;
  padding-top: 20%;
  background: url(images/index_vocationaltraining.jpg) no-repeat;
  background-size: cover;
  margin-bottom: 3%;
  display: flex;
  justify-content: flex-end;
}


.box {
  color: white;
  background-color: #6E0E00;
  max-width: 40%;
  min-width: 200px;
  padding: 6px;
}
.box a {
  background-color: white;
  color:#6E0E00;
  text-decoration: none;
  border: 0;
  border-radius: 1px;
  padding:2px 2px;
  margin: 0 auto;
}

.box a.current
 {color:#FFD166;
  }

.box a:focus,
.box a:hover {
  color:#ffc02e;
}

.boxstrong {
  font-weight:bold;
  font-size: larger;
}
/*end of banner homepage*/

/*main homepage*/


.main2 {
  display: flex;
  flex-wrap: wrap;
  padding-left: 5%;
  padding-right: 5%;
}

.maintextbox {
  width:50%;
  padding-right: 10%;
}

.stronglink {
  color: white;
  background-color: #6E0E00;
  text-decoration: none;
  border: 2px solid;
  border-radius: 1px;
  padding:3px 3px;
}
/*end of main homepage*/

/*aside*/
/*define picture gallery images*/
aside {
  margin-left:5%;
}

.gallery {
display: flex;
justify-content: space-between;
flex-wrap: wrap;
}

.img-txt-container {
margin: 3px;
display: flex;
flex-direction: column;
flex-wrap: nowrap;
}

.img-container {
  display: flex;
  width:100%;
  height: 200px;
}

.txt-container {
  max-width: 200px;
}

#container-img-1 {
  background-image: url(images/index_secondaire.jpg);
  background-size: cover;
  width: 200px;
  }

#container-img-2 {
    background-image: url(images/index_couture.jpg);
    background-size: cover;
    width: 200px;
    }

#container-img-3 {
    background-image: url(images/index_machineacoudre.jpg);
    background-size: cover;
    width: 200px;
    }

#container-img-4 {
    background-image: url(images/index_mahama.jpg);
    background-size: cover;
    width: 200px;
    }

#container-img-5 {
    background-image: url(images/index_drums.jpg);
    background-size: cover;
    width: 200px;
        }

.container-caption {
  background-color: #FFD166;
  color: #6E0E00;
  line-height: 1.2;
  margin-bottom: 0;
  margin-top: auto;
  padding: 2px;
  width: 100%
}
/*end of aside*/
/*END OF HOMEPAGE*/

/*SUBPAGE*/
/*banner subpage*/

.banner_subpage h1 {
  color: white;
  font-size: 18px;
}


/*end of banner subpage*/
/*END OF SUBPAGE*/

/*ASSOCIATION PAGE*/
.banner_associationpage {
  margin-top: 0;
  padding-bottom: 0;
  padding-top: 20%;
  padding-left: 5%;
  background: url(images/association_friendshipMK_banner.jpg) no-repeat;
  background-size: cover;
  margin-bottom: 3%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100px;
}

.banner_associationpage h1 {
  color: white;
  font-size: 3em;
  padding-bottom: 2em;
}

.contentcontainer {
  display: flex;
  flex-wrap: wrap-reverse;
}

/*left column association page*/

.tablecontainer {
  flex-grow: 0;
   flex-shrink: 0;
   flex-basis: 25%;
   min-width: 200px;

}

.tablecontainer h3 {
  background-color: #FFD166;
  text-decoration: none;
  border: 2px solid;
  border-color: #FFD166;
  border-radius: 1px;
  padding:3px 3px;
  width: 120px;
  margin-right: 5px;
}

.tablecontainer a {
  text-decoration: none;
  color: #708090;
}

.tablecontainer a.current
 {color:#6E0E00;
  }

.tablecontainer a:focus,
.tablecontainer a:hover {
  color:#6E0E00;
}

.table-association {
  border-collapse: collapse;
  border-top: 1px solid black;
  margin-right: 30px;
  margin-top: 70px;
}

.nouscontacter a {
  color: white;
  background-color: #6E0E00;
  text-decoration: none;
  border: 2px solid;
  border-radius: 1px;
  padding:3px 3px;
  margin-top: 6px;
}

.nouscontacter a:focus,
.nouscontacter a:hover {
  color: white;
  font-weight:bolder;
}

.normaltext a {
  text-decoration: none;
  color: #6E0E00;
}

.normaltext a:focus,
.normaltext a:hover {
  font-weight:bolder;
}

th, td {
  border-bottom: 1px solid black;
  padding: 2px 12px;
}
/*end left-column association page*/

/*right column association page*/
.maincontainer {
flex: 1 0 50%;
min-width: 200px;
padding-left: 20px;
}
.firsttextcontainer {
  width: 100%;
}
.textitemscontainer {
  display: flex;
  flex-wrap: wrap;
}
.associationcontainer {
  min-width: 200px;
  flex: 1 0 30%;
  padding: 5px;
  margin-right: 20px;
  margin-bottom: 20px;
  background-color: #F8F8F8;
}

/*end of right column association page*/
/*END OF ASSOCIATON PAGE*/

/*MAISON SHALOM PAGE*/
.banner_maisonshalompage {
  margin-top: 0;
  padding-bottom: 0;
  padding-top: 20%;
  background: url(images/maisonshalom_banner.jpg) no-repeat;
  background-size: cover;
  margin-bottom: 3%;
  display: flex;
  justify-content: center;
}

.banner_maisonshalompage h1 {
  color: white;
  font-size: 3em;
}

.extlinkicon {
  height: 12px;
  margin-left: 3px;
}

.table-maisonshalom {
  border-collapse: collapse;
  border-top: 1px solid black;
  margin-right: 30px;
}


/*END OF MAISON SHALOM PAGE*/

/* CONTACT PAGE*/
.banner_contactpage {
  margin-top: 0;
  padding-bottom: 0;
  padding-top: 20%;
  padding-left: 5%;
  background: url(images/association_espoirjeunes_banner.jpg) no-repeat;
  background-size: cover;
  margin-bottom: 3%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100px;
}

.banner_contactpage h1 {
  color: white;
  font-size: 3em;
  padding-bottom: 2em;
}
.main_contactpage {
display:inline;
width: 100%;
}

.table-contact {
  border-collapse: collapse;
  border-top: 1px solid black;
  margin-right: 30px;
  margin-top: 20px;
}
.contactitemscontainer {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.addresscontainer {
  min-width: 200px;
  flex: 1 0 30%;
  margin-right: 20px;
  padding-left: 20px;
  margin-bottom: auto;
  background-color: #F8F8F8;
}

.addressimg {
  min-width: 150px;
  flex: 1 0 30%;
  margin-bottom: auto;
}

.addressimg img {
  width: 100%;
}
/*END OF CONTACT PAGE*/


/* DONATION PAGE*/
.banner_aiderpage {
  margin-top: 0;
  padding-bottom: 0;
  padding-top: 20%;
  padding-left: 5%;
  background: url(images/don_enfants.jpg) no-repeat;
  background-size: cover;
  margin-bottom: 3%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100px;
}

.banner_aiderpage h1 {
  color: white;
  font-size: 3em;
  padding-bottom: 2em;
}

.dontext {
  padding-left: 40px;
}

.doncontainer {
  display: flex;
  flex-wrap: wrap;
}

.donbox {
  flex: 1 0 25%;
  min-width: 150px;
  padding: 5px;
  margin-right: 20px;
  background-color: #F8F8F8;
}

.donbox:last-child {
background-color: white;
padding: 0;
}

.donitemscontainer {

}

.donbox img {
  width: 100%;
}
/*END OF DONATION PAGE*/

